<resources>
    <string name="app_name">Pineco</string>
    <string name="phone">Phone</string>
    <string name="please_enter_your_phone_number_to_continue">Please enter your Phone Number to Continue</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="signUpTextView">Create an Account</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="fruit">Fruit</string>
    <string name="fruit_description">Fruit Description</string>
    <string name="just_steps_away_from_fresh_fruits">Just steps away from Fresh Fruits!</string>
    <string name="login">Login</string>
    <string name="fresh_fruits_at_your_doorstep">Fresh fruits at your doorstep!</string>
    <string name="sign_out">Sign Out</string>
    <string name="making_sure_you_are_ready_to_go">Making sure you are Ready to go!</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="fruit_validity">Fruit Validity</string>
    <string name="fruit_cost">Fruit Cost</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="quantity">Quantity</string>
    <string name="place_order">Place Order</string>
    <string name="total">Total</string>
    <string name="discount">Discount</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="grand_total">Grand Total</string>
    <string name="promotion_applied">Promotions Applied! </string>
    <string name="promotions">Promotions</string>
    <string name="looks_like_you_got_nothing_in_the_cart_yet">Looks like you got nothing in the cart yet...</string>
    <string name="estimated_delivery">Estimated Delivery</string>
    <string name="paymenttype">PaymentType</string>
</resources>
