<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
    android:id="@+id/fruitName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_toEndOf="@+id/fruitImage"
    android:layout_toRightOf="@+id/fruitImage"
    android:text="@string/fruit"
    android:textColor="@color/colorAccent"
    android:textSize="20sp" />

    <TextView
        android:id="@+id/fruitValidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="14dp"
        android:layout_toEndOf="@+id/fruitName"
        android:layout_toRightOf="@+id/fruitName"
        android:text="@string/fruit_validity"
        android:textColor="@color/colorTempText"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/fruitCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fruitImage"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/fruit_cost"
        android:textColor="@color/colorTempText"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/fruitDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fruitName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/fruitImage"
        android:layout_toRightOf="@+id/fruitName"
        android:text="@string/fruit_description"
        android:textColor="@color/colorTempText"
        android:textSize="15sp" />

    <com.github.siyamed.shapeimageview.CircularImageView

        android:id="@+id/fruitImage"
        siBorderColor="@color/colorPrimary"
        siBorderType="stroke"
        siBorderWidth="2dp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        app:siBorderColor="@color/colorPrimary"
        app:siBorderType="stroke"
        app:siBorderWidth="2dp"
        app:srcCompat="@mipmap/default_fruit_image" />

</RelativeLayout>