<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/loginToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/loginToolbar"
        android:layout_marginTop="0dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/just_steps_away_from_fresh_fruits"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <Button
                android:id="@+id/loginLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginPasswordLayout"
                android:layout_marginTop="30dp"
                android:background="@color/colorAccent"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:visibility="visible" />

            <com.hbb20.CountryCodePicker
                android:id="@+id/loginCCP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:visibility="gone"
                app:ccpDialog_textColor="@color/colorAccent"
                app:ccp_areaCodeDetectedCountry="true"
                app:ccp_arrowColor="@color/colorAccent"
                app:ccp_arrowSize="20dp"
                app:ccp_autoDetectCountry="true"
                app:ccp_autoDetectLanguage="true"
                app:ccp_autoFormatNumber="true"
                app:ccp_clickable="true"
                app:ccp_contentColor="@color/colorAccent"
                app:ccp_countryPreference="IN"
                app:ccp_defaultLanguage="ENGLISH"
                app:ccp_defaultNameCode="IN"
                app:ccp_showArrow="true"
                app:ccp_showFlag="true"
                app:ccp_showFullName="false"
                app:ccp_showNameCode="false"
                app:ccp_showPhoneCode="true"
                app:ccp_textGravity="CENTER"
                app:ccp_textSize="20sp">

            </com.hbb20.CountryCodePicker>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/loginInputLayoutPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_alignTop="@+id/loginCCP"
                android:layout_marginTop="-10dp"
                android:layout_toEndOf="@+id/loginCCP"
                android:layout_toRightOf="@+id/loginCCP"
                android:paddingLeft="5dp"
                android:visibility="gone">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/loginEditTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/loginCCP"
                    android:layout_toRightOf="@+id/loginCCP"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:textColor="@color/colorAccent" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/loginEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginTextView"
                android:layout_marginStart="10dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/loginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorAccent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/loginPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginEmailLayout"
                android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorAccent" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>